<resources>
    <string name="app_name">ServiveLog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ServicioLog">Bienvenido a ServicioLog</string>
    <string name="registro_de_usuario">Registro de usuario</string>
    <string name="nombres">Nombres</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="ingrese_su_apellido">Ingrese su apellido</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="ingrese_su_correo_electronico">Ingrese su correo electronico</string>
    <string name="contrase_a">contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="ServiceTagExp">CN-009NK2-73846-65N-0P05</string>
</resources>